@@ -7,6 +7,7 @@ import com.cydeo.repository.ProductRepository;
 import com.cydeo.service.CompanyService;
 import com.cydeo.service.ProductService;
 import com.cydeo.util.MapperUtil;
+import org.springframework.security.core.parameters.P;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -19,13 +20,11 @@ public class ProductServiceImpl implements ProductService {
     private final MapperUtil mapperUtil;
     private final CompanyService companyService;
 
-
     public ProductServiceImpl(ProductRepository productRepository, MapperUtil mapperUtil, CompanyService companyService) {
         this.productRepository = productRepository;
         this.mapperUtil = mapperUtil;
         this.companyService = companyService;
     }
-
 
     @Override
     public ProductDto findById(Long id) {
@@ -39,23 +38,24 @@ public class ProductServiceImpl implements ProductService {
         List<Product> sortedProducts = productRepository.findByCompanyIdOrderByCategoryDescriptionAndProductNameAsc(companyId);
         return sortedProducts.stream()
                 .map(product -> mapperUtil.convert(product, new ProductDto()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void save(ProductDto productDto) {
+    public ProductDto save(ProductDto productDto) {
         Product product = mapperUtil.convert(productDto, new Product());
-        product.setCategory(mapperUtil.convert(productDto.getCategory(), new Category()));
-        productRepository.save(product);
+        //product.setCategory(mapperUtil.convert(productDto.getCategory(), new Category()));
+        Product saved = productRepository.save(product);
+        return mapperUtil.convert(saved, new ProductDto());
     }
 
     @Override
-    public void update(ProductDto productDto) {
+    public ProductDto update(ProductDto productDto) {
         Product product = mapperUtil.convert(productDto, new Product());
         product.setCategory(mapperUtil.convert(productDto.getCategory(), new Category()));
         productRepository.save(product);
+        return null;
     }
-
 
     @Override
     public void delete(Long id) {
@@ -71,30 +71,6 @@ public class ProductServiceImpl implements ProductService {
         return productList.stream().map(product -> mapperUtil.convert(product, new ProductDto())).collect(Collectors.toList());
     }
 
-//    @Override
-//    public boolean isNameUnique(Long categoryId, String name, Long excludeProductId) {
-//        String normalizedName = name.trim().toLowerCase();
-//        List<Product> products = productRepository.findByCategory_Id(categoryId);
-//        return products.stream()
-//                .filter(product -> !product.getId().equals(excludeProductId))
-//                .noneMatch(product -> product.getName().trim().equalsIgnoreCase(normalizedName.trim()));
-//    }
-
-//    @Override
-//    public List<ProductDto> listAllProductsByCompanyId(Long id) {
-//        //todo Danilo there were no implementation
-//        return List.of();
-//
-//    }
-//
-//
-//    @Override
-//    public List<ProductDto> findAllInStock() {
-//        Long companyId = companyService.getCompanyDtoByLoggedInUser().getId();
-//        List<Product> productsInStock = productRepository.findByCategory_Company_IdAndQuantityInStockGreaterThan(companyId, 0);
-//        return productsInStock.stream().map(product -> mapperUtil.convert(product, new ProductDto())).collect(Collectors.toList());
-//    }
-//
 
 }
 
